# discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  production.example.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml  release-drafter.yml  renovate.json
.github/workflows/: labels.yaml  linting.yaml  publish.yaml  release-drafter.yaml
modules/: __init__.py  events.py
modules/button_roles/: __init__.py  role_view.py
modules/listener/: __init__.py
modules/racing/: __init__.py
modules/system/: __init__.py  quote.py
modules/twitch/: __init__.py  ruff.toml
prod/: production.example.yml
utils/: __init__.py  utils.py
